--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -41,7 +41,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install flake8 flake8-docstrings flake8-bugbear flake8-quotes flake8-import-order
+          pip install flake8
         
       - name: Run flake8 with error annotations
         uses: reviewdog/action-flake8@v3
