update code structure

--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 # Log Analyzer Configuration
-PORT=8000
-CHROMA_HOST=chromadb
-CHROMA_PORT=8000
-OLLAMA_HOST=ollama
+APP_PORT=8005
+CHROMA_HOST=localhost
+CHROMA_PORT=8001
+OLLAMA_HOST=localhost
 OLLAMA_PORT=11434
 MODEL_NAME=llama3.2
 COLLECTION_NAME=log_history
@@ -14,10 +14,10 @@ RETENTION_DAYS=30
 BATCH_SIZE=100
 
 # Notification Configuration
-ENABLE_NOTIFICATIONS=true
+ENABLE_NOTIFICATIONS=false
 TELEGRAM_BOT_TOKEN=YOUR_BOT_TOKEN
-TELEGRAM_CHAT_IDS=CHAT_ID1,CHAT_ID2
-SLACK_WEBHOOK_URLS=YOUR_WEBHOOK_URL
+TELEGRAM_CHAT_IDS=["CHAT_ID1", "CHAT_ID2"]
+SLACK_WEBHOOK_URLS=["YOUR_WEBHOOK_URL"]
 SMTP_USERNAME=your-email@gmail.com
 SMTP_PASSWORD=your-app-password
-EMAIL_RECIPIENTS=recipient@example.com
+EMAIL_RECIPIENTS=["recipient@example.com"]
